scaffold/typescript-go-main/testdata/baselines/reference/submodule/compiler/recursiveExportAssignmentAndFindAliasedType3.errors.txt
recursiveExportAssignmentAndFindAliasedType3_moduleDef.d.ts(2,5): error TS2303: Circular definition of import alias 'self'.
recursiveExportAssignmentAndFindAliasedType3_moduleDef.d.ts(3,5): error TS2303: Circular definition of import alias 'self'.
recursiveExportAssignmentAndFindAliasedType3_moduleDef.d.ts(6,5): error TS2303: Circular definition of import alias 'self'.
recursiveExportAssignmentAndFindAliasedType3_moduleDef.d.ts(7,5): error TS2303: Circular definition of import alias 'self'.
recursiveExportAssignmentAndFindAliasedType3_moduleDef.d.ts(10,5): error TS2303: Circular definition of import alias 'self'.
recursiveExportAssignmentAndFindAliasedType3_moduleDef.d.ts(11,5): error TS2303: Circular definition of import alias 'self'.


==== recursiveExportAssignmentAndFindAliasedType3_moduleA.ts (0 errors) ====
    /// <reference path="recursiveExportAssignmentAndFindAliasedType3_moduleDef.d.ts"/>
    import moduleC = require("moduleC");
    import ClassB = require("./recursiveExportAssignmentAndFindAliasedType3_moduleB");
    export var b: ClassB; // This should result in type ClassB
==== recursiveExportAssignmentAndFindAliasedType3_moduleDef.d.ts (6 errors) ====
    declare module "moduleC" {
        import self = require("moduleD");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'self'.
        export = self;
        ~~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'self'.
    }
    declare module "moduleD" {
        import self = require("moduleE");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'self'.
        export = self;
        ~~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'self'.
    }
    declare module "moduleE" {
        import self = require("moduleC");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'self'.
        export = self;
        ~~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'self'.
    }
    
==== recursiveExportAssignmentAndFindAliasedType3_moduleB.ts (0 errors) ====
    class ClassB { }
    export = ClassB;
    